# g710plus-linux

./: .gitignore  Makefile.am  README.md  configure.ac
doc/spec/: hid-report-descriptor-intf-0.txt  hid-report-descriptor-intf-1.txt  hid-reports.md
libg710/: Makefile.am  g710_common.h  g710_core.c
