lib_LTLIBRARIES = libg710.la

# Core libx52 library
# This library handles the USB communication between the host and the X52
libg710_la_SOURCES = g710_core.c
libg710_la_LDFLAGS = -version-info 0:0:0

# Header files that need to be copied
# g710includedir = $(includedir)/g710-@G710_PKG_VERSION@
# g710include_HEADERS = libg710.h
